qa: improvement of the navbar

--- a/Inotki/static/css/burger.css
+++ b/Inotki/static/css/burger.css
@@ -22,6 +22,10 @@
         color: rgb(255, 255, 255);
     }
 
+    #logoResponsive{
+        display: block;
+    }
+
     .openb {
         display: block;
     }
