style(forms): login + register + reset password

--- a/Inotki/templates/base/password/password_reset.html
+++ b/Inotki/templates/base/password/password_reset.html
@@ -1,5 +1,12 @@
 {% extends 'main.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
+
+{% block css %}
+    <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/form.css' %}" />
+{% endblock %}
 
 {% block title %}
     Reset password
@@ -7,12 +14,13 @@
 
 {% block body_content %}
 
-    <h1>Reset password</h1>
+    <h2>Reset password</h2>
 
     <form method="POST" action="">
         {% csrf_token %}
         {{ form|crispy }}
-        <input type="submit" value="Reset password">
+        <button class="blueButton" type="submit">Reset password</button>
+
     </form>
     <p>Don't have an account ? <a href="{% url 'register' %}">Register</a></p>
     <p>have an account ? <a href="{% url 'login' %}">Sign in</a></p>
