--- a/Inotki/templates/main.html
+++ b/Inotki/templates/main.html
@@ -6,16 +6,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <!--<script src="{% static 'bootstrap.bundle.min.js' %}"></script>
-    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" /> -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/burger.css' %}" />
-    <script src="{% static 'js/app.js' %}" defer></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <style> @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap'); </style>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/burger.css' %}" />
+    <script src="{% static 'js/app.js' %}" defer></script>
+    {% block css %}{% endblock css %}
+
     <!-- names: iloni, Inolii, idoka, igora, glomera, Inolii-->
     <title>
         {% filter default:0|add:' -' %}{% block title %}{% endblock title %}
@@ -51,8 +50,8 @@
 
         <ul class="menu nav">
             <img src="/static/img/logo.png" id="logoResponsive" alt="logo">
+            <li><a href="{% url 'home' %}">Home</a></li>
             {% if request.user.is_authenticated %}
-                <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'tasks' %}">Task</a></li>
                 <li><a href="{% url 'tags' %}">Tag</a></li>
                 <li><a href="{% url 'profile' %}">Profile</a></li>
