--- a/Inotki/static/css/style.css
+++ b/Inotki/static/css/style.css
@@ -25,8 +25,9 @@ header{
 	width: 100%;
 	padding: 10px 25px 10px 25px;
 	margin-bottom: 2rem;
-	background-color: #04121A;
-	background-image: radial-gradient(100% 100% at 100% 0, #4490ff 0, #2F70CC 100%);
+	/* background-color: #04121A; */
+	/* 	background-image: radial-gradient(100% 100% at 100% 0, #4490ff 0, #2F70CC 100%); */
+	background-color: #3584ff;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -171,5 +172,49 @@ header{
 	border-radius: 50%;
 }
 
+
+.blueButton {
+	align-items: center;
+	appearance: none;
+	background-image: radial-gradient(100% 100% at 100% 0, #5adaff 0, #4490ff 100%);
+	border: 0;
+	border-radius: 6px;
+	box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
+	box-sizing: border-box;
+	color: #fff;
+	cursor: pointer;
+	display: inline-flex;
+	font-family: "JetBrains Mono",monospace;
+	height: 48px;
+	justify-content: center;
+	line-height: 1;
+	list-style: none;
+	overflow: hidden;
+	padding-left: 16px;
+	padding-right: 16px;
+	text-align: left;
+	text-decoration: none;
+	transition: box-shadow .15s,transform .15s;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+	white-space: nowrap;
+	font-size: 18px;
+	z-index: 0;
+}
+
+.blueButton:focus {
+	box-shadow: #366dbd 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #366dbd 0 -3px 0 inset;
+}
+
+.blueButton:hover {
+	box-shadow: rgba(45, 35, 66, .4) 0 4px 8px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
+	transform: translateY(-2px);
+}
+
+.blueButton:active {
+	box-shadow: #3c4fe0 0 3px 7px inset;
+	transform: translateY(2px);
+}
 
 
