--- a/Inotki/templates/base/password/password_reset_complete.html
+++ b/Inotki/templates/base/password/password_reset_complete.html
@@ -1,5 +1,12 @@
 {% extends 'main.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
+
+{% block css %}
+    <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/form.css' %}" />
+{% endblock %}
 
 {% block title %}
     Password reset completed
@@ -7,7 +14,7 @@
 
 {% block body_content %}
 
-    <h1>Password reset completed</h1>
+    <h2>Password reset completed</h2>
     <div class="alert alert-info">
         Your password has been successfully reset.
     </div>
