--- a/Inotki/templates/base/password/password_reset_done.html
+++ b/Inotki/templates/base/password/password_reset_done.html
@@ -1,5 +1,12 @@
 {% extends 'main.html' %}
 {% load crispy_forms_tags %}
+{% load static %}
+
+{% block css %}
+    <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/form.css' %}" />
+{% endblock %}
 
 {% block title %}
     Reset password done
@@ -7,7 +14,7 @@
 
 {% block body_content %}
 
-    <h1>Reset password</h1>
+    <h2 >Reset password</h2>
     <div class="alert alert-info">
         An email has been sent with instructions to reset your password
     </div>
