--- a/Inotki/templates/base/user_login.html
+++ b/Inotki/templates/base/user_login.html
@@ -1,5 +1,12 @@
 {% extends 'main.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
+
+{% block css %}
+    <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/form.css' %}" />
+{% endblock %}
 
 {% block title %}
     Login
@@ -7,14 +14,14 @@
 
 {% block body_content %}
 
-    <h1>Login</h1>
+    <h2 class="font-weight-bold text-center title">Login</h2>
 
     <form method="POST" action="">
         {% csrf_token %}
         {{ form|crispy }}
-        <input type="submit" value="Login">
+        <button class="blueButton" type="submit">Login</button>
     </form>
-    <p>Don't have an account ? <a href="{% url 'register' %}">Register</a></p>
-    <p><a href="{% url 'password_reset' %}">Forgot your password ?</a></p>
+    <p class="font-weight-light">Don't have an account ? <a href="{% url 'register' %}">Register</a></p>
+    <p class="font-weight-light"><a href="{% url 'password_reset' %}">Forgot your password ?</a></p>
 
 {% endblock %}
