--- a/Inotki/templates/base/user_register.html
+++ b/Inotki/templates/base/user_register.html
@@ -1,5 +1,12 @@
 {% extends 'main.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
+
+{% block css %}
+    <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/form.css' %}" />
+{% endblock %}
 
 {% block title %}
     Register
@@ -7,13 +14,12 @@
 
 {% block body_content %}
 
-    <h1>Register</h1>
+    <h2 class="font-weight-bold text-center title">Register</h2>
 
     <form method="POST" action="">
         {% csrf_token %}
         {{ form|crispy  }}
-        <input type="submit" value="Sign up">
+        <button class="blueButton" type="submit">Sign up</button>
     </form>
-    <p>Already have an account ? <a href="{% url 'login' %}">Sign in</a></p>
-
+    <p class="font-weight-light">Already have an account ? <a href="{% url 'login' %}">Sign in</a></p>
 {% endblock %}
