--- a/Inotki/templates/base/option_update.html
+++ b/Inotki/templates/base/option_update.html
@@ -16,4 +16,6 @@
             <button class="btn" type="submit">Update</button>
         </div>
     </form>
+    <a href="{% url 'user_delete' request.user.id %}">delete</a>
+
 {% endblock %}
