fix: name update (log in...) + succes message

--- a/Inotki/templates/base/user_register.html
+++ b/Inotki/templates/base/user_register.html
@@ -9,12 +9,12 @@
 {% endblock %}
 
 {% block title %}
-    Register
+    Sign up
 {% endblock %}
 
 {% block body_content %}
 
-    <h2 class="font-weight-bold text-center title">Register</h2>
+    <h2 class="font-weight-bold text-center title">Sign up</h2>
 
     <form method="POST" action="">
         {% csrf_token %}
