--- a/Inotki/templates/base/user_login.html
+++ b/Inotki/templates/base/user_login.html
@@ -9,19 +9,19 @@
 {% endblock %}
 
 {% block title %}
-    Login
+    Log in
 {% endblock %}
 
 {% block body_content %}
 
-    <h2 class="font-weight-bold text-center title">Login</h2>
+    <h2 class="font-weight-bold text-center title">Log in</h2>
 
     <form method="POST" action="">
         {% csrf_token %}
         {{ form|crispy }}
-        <button class="blueButton" type="submit">Login</button>
+        <button class="blueButton" type="submit">Log in</button>
     </form>
-    <p class="font-weight-light">Don't have an account ? <a href="{% url 'register' %}">Register</a></p>
+    <p class="font-weight-light">Don't have an account ? <a href="{% url 'register' %}">Sign up</a></p>
     <p class="font-weight-light"><a href="{% url 'password_reset' %}">Forgot your password ?</a></p>
 
 {% endblock %}
