--- a/Inotki/static/css/style.css
+++ b/Inotki/static/css/style.css
@@ -1,6 +1,7 @@
 
 html {
 	scroll-behavior: smooth;
+	overflow-x: hidden;
 }
 
 * {
@@ -89,7 +90,7 @@ header{
 }
 
 
-/* button */
+/* white button */
 .button3D {
 	align-items: center;
 	appearance: none;
@@ -135,7 +136,7 @@ header{
 	transform: translateY(2px);
 }
 
-/* button icon */
+/* button for notif */
 .notificationIcon {
 	position: relative;
 	display: flex;
@@ -172,7 +173,7 @@ header{
 	border-radius: 50%;
 }
 
-
+/* blue button */
 .blueButton {
 	align-items: center;
 	appearance: none;
@@ -217,4 +218,99 @@ header{
 	transform: translateY(2px);
 }
 
+
+/* flash message */
+.toast {
+	position: absolute;
+	top: 115px;
+	right: 30px;
+	border-radius: 12px;
+	background: #fff;
+	padding: 20px 35px 20px 25px;
+	box-shadow: 0 6px 20px -5px rgba(0, 0, 0, 0.1);
+	overflow: hidden;
+	transform: translateX(calc(100% + 30px));
+	transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.35);
+	font-family: "Poppins", sans-serif;
+}
+
+.toast.active {
+	transform: translateX(0%);
+}
+
+.toast .toast-content {
+	display: flex;
+	align-items: center;
+}
+
+.toast-content .check {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 35px;
+	min-width: 35px;
+	background-color: #3584ff;
+	color: #fff;
+	font-size: 20px;
+	border-radius: 50%;
+}
+
+.toast-content .message {
+	display: flex;
+	flex-direction: column;
+	margin: 0 20px;
+}
+
+.message .text {
+	font-size: 16px;
+	font-weight: 400;
+	color: #666666;
+}
+
+.message .text.text-1 {
+	font-weight: 600;
+	color: #333;
+}
+
+.toast .close {
+	position: absolute;
+	top: 10px;
+	right: 15px;
+	padding: 5px;
+	cursor: pointer;
+	opacity: 0.7;
+}
+
+.toast .close:hover {
+	opacity: 1;
+}
+
+.toast .progress {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	height: 3px;
+	width: 100%;
+
+}
+
+.toast .progress:before {
+	content: "";
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	background-color: #3584ff;
+}
+
+.progress.active:before {
+	animation: progress 5s linear forwards;
+}
+
+@keyframes progress {
+	100% {
+		right: 100%;
+	}
+}
 
