--- a/Inotki/templates/main.html
+++ b/Inotki/templates/main.html
@@ -31,7 +31,7 @@
             {% if request.user.is_authenticated %}
                 <a href="{% url 'tasks' %}"><img src="/static/img/logo.png" id="logo" alt="logo"></a>
             {% else %}
-            <a href="{% url 'home' %}"><img src="/static/img/logo.png" id="logo" alt="logo"></a>
+                <a href="{% url 'home' %}"><img src="/static/img/logo.png" id="logo" alt="logo"></a>
             {% endif %}
         </div>
 
@@ -61,7 +61,9 @@
                 {% endif %}
                 <li class="mobileFormatNotifLi"><button onclick="location.href='{% url 'notification' %}'" type="button" class="notificationIcon">
                     <i class="fa-solid fa-bell fa-xl"></i>
-                    <span class="notificationIcon__badge">2</span>
+                    {% if notifCount > 0 %}
+                        <span class="notificationIcon__badge">{% if notifCount > 1 %}{{ notifCount }}{% endif %}</span>
+                    {% endif %}
                 </button></li>
                 <li><button class="button3D" onclick="location.href='{% url 'logout' %}'">Log out</button></li>
             {% else %}
@@ -73,12 +75,26 @@
 </header>
 
 {% if messages%}
-    <!-- Alerts -->
     <section id="alter" title="alerts">
-        <h1 class="d-none">Alerts</h1>
-        {% for message in messages %}
-            <div class="alert alert-{{ message.tags }}" role="alert">{{ message }}</div>
-        {% endfor %}
+        <div class="toast">
+            <div class="toast-content">
+                <i class="fas fa-solid fa-check check"></i>
+
+                <div class="message">
+                    <span class="text text-1">
+                        Info
+                    </span>
+
+                    <span class="text text-2">
+                      {% for message in messages %}
+                          <div class="" role="alert">{{ message }}</div>
+                      {% endfor %}
+                     </span>
+                </div>
+            </div>
+            <i class="fa-solid fa-xmark close"></i>
+            <div class="progress"></div>
+        </div>
     </section>
 {% endif %}
 
