--- a/Inotki/static/css/style.css
+++ b/Inotki/static/css/style.css
@@ -35,6 +35,11 @@ header{
 	justify-content: space-between;
 }
 
+/* navbar shadow */
+.add-shadow{
+	box-shadow: 0 2px 4px 0 rgba(0,0,0,.2);
+}
+
 .toggle{
 	display: none;
 }
@@ -313,4 +318,3 @@ header{
 		right: 100%;
 	}
 }
-
