--- a/Inotki/static/css/form.css
+++ b/Inotki/static/css/form.css
@@ -46,6 +46,10 @@ h2{
 }
 
 @media all and (min-width: 900px) {
+    .add-shadow{
+	    box-shadow: none;
+    }
+
     #content{
         animation: 0.7s ease-out 0s 1 slideInFromLeft;
         margin-left: 25vw;
