--- a/Inotki/templates/main.html
+++ b/Inotki/templates/main.html
@@ -47,7 +47,9 @@
                 <div>
                     <button onclick="location.href='{% url 'notification' %}'" type="button" class="notificationIcon">
                         <i class="fa-solid fa-bell fa-xl"></i>
-                        <span class="notificationIcon__badge">2</span>
+                        {% if notifCount > 0 %}
+                            <span class="notificationIcon__badge">{% if notifCount > 1 %}{{ notifCount }}{% endif %}</span>
+                        {% endif %}
                     </button>
                 </div>
             {% endif %}
@@ -66,12 +68,14 @@
                 {% if user.is_staff %}
                     <li><a href="/admin">Admin Dashboard</a></li>
                 {% endif %}
-                <li class="mobileFormatNotifLi"><button onclick="location.href='{% url 'notification' %}'" type="button" class="notificationIcon">
-                    <i class="fa-solid fa-bell fa-xl"></i>
-                    {% if notifCount > 0 %}
-                        <span class="notificationIcon__badge">{% if notifCount > 1 %}{{ notifCount }}{% endif %}</span>
-                    {% endif %}
-                </button></li>
+                <li class="mobileFormatNotifLi">
+                    <button onclick="location.href='{% url 'notification' %}'" type="button" class="notificationIcon">
+                        <i class="fa-solid fa-bell fa-xl"></i>
+                        {% if notifCount > 0 %}
+                            <span class="notificationIcon__badge">{% if notifCount > 1 %}{{ notifCount }}{% endif %}</span>
+                        {% endif %}
+                    </button>
+                </li>
                 <li><button class="button3D" onclick="location.href='{% url 'logout' %}'">Log out</button></li>
             {% else %}
                 <li><a href="{% url 'login' %}">Log in</a></li>
