style: boostrap setup for settings and profile page

--- a/Inotki/templates/base/user_update.html
+++ b/Inotki/templates/base/user_update.html
@@ -1,5 +1,11 @@
 {% extends 'main.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
+
+{% block css %}
+    <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
+{% endblock %}
 
 {% block title %}
     Profile update
