--- a/Inotki/templates/base/option_update.html
+++ b/Inotki/templates/base/option_update.html
@@ -1,5 +1,11 @@
 {% extends 'main.html' %}
+{% load static %}
 {% load crispy_forms_tags %}
+
+{% block css %}
+    <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
+    <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
+{% endblock %}
 
 {% block title %}
     Setting
@@ -16,6 +22,7 @@
             <button class="btn" type="submit">Update</button>
         </div>
     </form>
+
     <a href="{% url 'user_delete' request.user.id %}">delete your account</a>
 
 {% endblock %}
