--- a/Inotki/templates/tasks/task_form.html
+++ b/Inotki/templates/tasks/task_form.html
@@ -21,13 +21,15 @@
             {% endif %}
 
             <div style="margin-bottom: 10px">
-                <label for="title">Title : </label>
+                <label for="title">Title* : </label>
                 {{ form.title }}
             </div>
-            <label for="description">Description : </label>
-            <div style="margin-bottom: 10px">
+
+            <div>
+                <label for="description">Description : </label>
                 {{ form.description }}
             </div>
+
             <div style="margin-bottom: 10px">
                 <label for="date">Deadline :</label>
                 {{ form.date_to_do }} <!-- DATA PICKER DJANGO : https://simpleisbetterthancomplex.com/tutorial/2019/01/03/how-to-use-date-picker-with-django.html -->
