--- a/Inotki/static/css/list.css
+++ b/Inotki/static/css/list.css
@@ -83,29 +83,29 @@ form.search-form::after {
 }
 
 h3{
-  color: rgb(0, 0, 0);
+  color: rgba(59, 59, 59, 0.91);
   font-weight: lighter;
   font-size: 1rem;
   font-family: "JetBrains Mono", monospace;
   margin-top: .9rem;
-
 }
 
 .current-task{
   border-radius: 5px 5px 5px 5px;
-  background-color: rgba(231, 231, 231, 0.44);
+  background-color: rgba(231, 231, 231, 0.17);
   margin-bottom: 1rem;
   font-family: "JetBrains Mono", monospace;
   padding: .5rem .5rem;
-
+  border: 1px solid rgb(231, 231, 231);
 }
 
 .completed-task{
   border-radius: 5px 5px 5px 5px;
-  background-color: rgba(183, 183, 183, 0.44);
+  background-color: rgba(183, 183, 183, 0.3);
   margin-bottom: 1rem;
   font-family: 'Poppins', sans-serif;
   padding: .5rem .5rem;
+  border: 1px solid rgba(183, 183, 183, 0.92);
 }
 
 .task{
@@ -119,7 +119,19 @@ h3{
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
 
+.task-completed{
+  padding-left:15px;
+  padding-right:15px;
+  border: 1px solid rgb(183, 183, 183);
+  border-radius: 5px 5px 5px 5px;
+  margin-bottom: .5rem;
+  margin-top: .3rem;
+  background-color: rgba(255, 255, 255, 0.94);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .with-date{
@@ -142,7 +154,7 @@ h3{
 }
 
 .edit{
-  color: #000000;
+  color: #4b96ff; /* text color */
   padding-top: 15px;
   padding-bottom: 15px;
   text-align: center;
@@ -205,5 +217,13 @@ h3{
 
   form.search-form button {
     width: 7%;
+  }
+
+  .current-task{
+    padding: .5rem 1rem;
+  }
+
+  .completed-task{
+    padding: .5rem 1rem;
   }
 }
