--- a/Inotki/templates/base/user_update.html
+++ b/Inotki/templates/base/user_update.html
@@ -5,6 +5,7 @@
 {% block css %}
     <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'bootstrap.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/content_formatting.css' %}" />
 {% endblock %}
 
 {% block title %}
