--- a/Inotki/templates/tags/tag_list.html
+++ b/Inotki/templates/tags/tag_list.html
@@ -4,6 +4,7 @@
 {% block css %}
     <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/list.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/content_formatting.css' %}" />
 {% endblock %}
 
 {% block title %}
