--- a/Inotki/templates/notification/notification_list.html
+++ b/Inotki/templates/notification/notification_list.html
@@ -4,6 +4,7 @@
 {% block css %}
     <script src="{% static 'bootstrap.bundle.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/list.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/content_formatting.css' %}" />
 {% endblock %}
 
 {% block title %}
@@ -20,7 +21,7 @@
             <!-- LATE -->
             {% for task in tasks_to_do_late %}
                 <div class="task">
-                    <a class="blue-icon" href="{% url 'task_completed' task.id user.id %}"><i class="fa-regular fa-square"></i></a>
+                    <a class="blue-icon" href="{% url 'notification_task_completed' task.id user.id %}"><i class="fa-regular fa-square"></i></a>
                     <a class="edit" href="{% url 'task_update' task.id %}">
                         <div class="with-date">
                             <p class="task-title">{{ task.title }}</p>
